Integrity with GUI clients